# pyglider

./: pyproject.toml
pyglider/: _version.py  seaexplorer.py
tests/: test_slocum.py
tests/expected/example-seaexplorer-raw/L0-timeseries/: dfo-bb046-20200908.nc
tests/expected/example-seaexplorer/L0-timeseries/: dfo-eva035-20190718.nc
tests/expected/example-slocum-littleendian/L0-timeseries/: dfo-maria997-20220614.nc
tests/expected/example-slocum/L0-timeseries/: dfo-rosie713-20190615.nc
