[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "pyglider/_version.py"

[project]
name = "pyglider"
dynamic = ["version"]
dependencies=[
        "xarray",
        "dask",
        "netcdf4",
        "gsw",
        "scipy",
        "bitstring",
        "pooch",
        "polars",
        "dbdreader"
]
requires-python = ">= 3.11"
authors = [
  {name = "Jody Klymak", email = "jklymak@gmail.com"},
  {name = "Callum Rollo", email = "callum.rollo@voiceoftheocean.org"},
]
maintainers = [
  {name = "Jody Klymak", email = "jklymak@gmail.com"}
]
description = "Glider data to netCDF translation in python"
readme = "Readme.md"
license = {text = "Apache"}
keywords = ["glider", "seaexplorer", "slocum", "netcdf"]

[project.urls]
Homepage = "https://pyglider.readthedocs.io/"
Documentation = "https://pyglider.readthedocs.io/"
Repository = "https://github.com/c-proof/pyglider"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "tox",
  "coverage",
  "pre-commit",
  "black",
  "ruff",
  "compliance_checker",
]

[tool.setuptools.packages.find]
where = ["."]